Sample case using font size as data.

--- a/src/App.scss
+++ b/src/App.scss
@@ -206,3 +206,10 @@ button {
   background-color: #5c6a79;
 }
 
+// d3-specific
+.changeColor {
+  background: deeppink;
+  color: indigo;
+  width: 50px;
+  margin: 0 auto;
+}
